# llm_ontology_awareness

./: .gitignore  README.md  flake.nix  pyproject.toml  requirements-dev.txt  requirements.txt  shell.nix
data/astronomy-ontology/: astronomy.owl  catalog-v001.xml
data/case-uco-owl-trafficking/: case-uco-owl-trafficking.rdf  catalog-v001.xml
data/wines-ontology/: catalog-v001.xml  wine-clean.rdf
docs/source/: conf.py  llm_ontology_awareness.data_processing.rst  llm_ontology_awareness.modelling.evaluation.rst  llm_ontology_awareness.rst
jobs/: slurm_job_1
run_args/: 4f680d54-cb11-460b-ad6a-a435b9a44559.json  run_args_1.json  run_args_2024-08-22-11-04-00.json  run_args_2024-08-22-13-40-22.json  run_args_2024-08-22-13-42-42.json  run_args_2024-08-22-13-43-11.json  run_args_2024-08-22-13-51-03.json  run_args_2024-08-22-13-53-00.json  run_args_gpt-4o.json  run_args_test.json
run_args/archive/: run_args_1.json
run_args/case-uco-owl-trafficking/: .json  0285c864-4551-4389-b2b1-9fead0633a03.json  e5e0a29a-ec0a-49c9-960e-66fc0c8c29f5.json
run_args/case-uco-owl-trafficking-renamed/: 99bb35bf-3701-4b1a-8301-8ccbacb28823.json
run_args/wines-ontology/: 1d6268a0-8324-4220-baaf-ecab8ded7bed.json  d3cc3a58-aad2-41b0-b01a-21e3a193ef53.json
runs/: run_args_1.json  run_args_test.json
shell_scripts/: change_output_path.sh  change_run_args_param.sh  cp_run_args.sh  create_openai_batches.sh  format_huggingface_responses.sh  format_openai_responses.sh  get_metrics.sh  get_openai_batches.sh  run_format_response.sh  submit_openai_batches.sh  submit_openai_gpt-4o-stat-batches.sh
src/llm_ontology_awareness/: matches.txt
(+941 files in other folders)
