[project]
name = "llm_ontology_awareness"
version = "1.0.0"
description = "Tools to generate and evaluate different prompts for various degrees of ontology awareness"
authors = [
  {name="Upal Bhattacharya", email="u.bhattacharya@uu.nl"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
#"ontospy",
"openai",
"polars",
"pydantic",
"python-dotenv",
"scikit_learn",
"torch",
"tqdm",
"transformers"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
