[project]
name = "llm_ontology_awareness"
version = "0.3.0"
description = "LLM Ontology Awareness"
authors = [
  {name="Upal Bhattacharya", email="u.bhattacharya@uu.nl"},
]
readme = "README.md"
dynamic = ["dependencies", "optional-dependencies"]
requires-python = ">=3.12"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = { file = ["requirements-dev.txt"] }

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
